Apply gofmt, bundle calc price, i18n package and bundle, refactor
